turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:3: error: '<-' expected but ')' found.
  for (i < 0 to 2) {
                 ^TriangleFlat:7: error: illegal start of simple expression
}
^